= Milestone 0.3 =
* New styles for choice to mark correct and wrong answers