@@ -5,6 +5,4 @@ public interface ITextControl {
 	/** Send on change event */
 	public void onChange();
 	
-	/** Enable or disable control */
-	public void setEnabled(boolean state);
 }
