@@ -2,10 +2,11 @@ package com.klangner.qtiplayer.client.module.text;
 
 import com.google.gwt.user.client.ui.TextBox;
 import com.google.gwt.xml.client.Element;
+import com.klangner.qtiplayer.client.module.IActivity;
 import com.klangner.qtiplayer.client.module.IResponse;
 import com.klangner.qtiplayer.client.util.XmlElement;
 
-public class TextEntryWidget extends TextBox implements ITextControl{
+public class TextEntryWidget extends TextBox implements ITextControl, IActivity{
 
 	/** response processing interface */
 	private IResponse 	response;
@@ -35,4 +36,30 @@ public class TextEntryWidget extends TextBox implements ITextControl{
 		response.set(lastValue);
 	}
 
+	/**
+	 * @see IActivity#markAnswers()
+	 */
+	public void markAnswers() {
+		
+		setEnabled(false);
+		if( response.isCorrectAnswer(lastValue) )
+			setStyleName("qp-text-textentry-correct");
+		else
+			setStyleName("qp-text-textentry-wrong");
+	}
+
+	/**
+	 * @see IActivity#reset()
+	 */
+	public void reset() {
+		setEnabled(true);
+		setStyleName("");
+	}
+
+	/**
+	 * @see IActivity#showCorrectAnswers()
+	 */
+	public void showCorrectAnswers() {
+		setEnabled(false);
+	}
 }
