@@ -1,2 +1,3 @@
 = Milestone 0.3 =
 * New styles for choice to mark correct and wrong answers
+* Add styles to mark correct and wrong answers in text interaction (gap and choice)
